# monochrome-plus

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  index.html  neutralino.config.dev.json  neutralino.config.json  package-lock.json  package.json  styles.css  todo.md  vite-plugin-auth-gate.js  vite-plugin-proxy-fetch.js  vite.config.js
.github/: FUNDING.yml
.github/agents/: Mirage.agent.md
.github/skills/adaptive-mind/: SKILL.md
.github/skills/socratic-mirror/: SKILL.md
.github/workflows/: desktop-release.yml  lint.yml  tauri-release.yml
docs/: AUTH_GATE.md  BUILD.md  GETTING_STARTED_INTEGRATE.md  proxy-spec.md
functions/album/: [id].js
functions/artist/: [id].js
functions/playlist/: [id].js
functions/track/: [id].js
js/: api.js  app.js  audio-context.js  automix-howler.js  automix.js  db.js  downloads.js  events.js  image-loader.js  listenbrainz.js  lyrics.js  metadata.js  music-api.js  palette.js  performance-mode.js  player.js  playlist-importer.js  profile.js  qobuz-api.js  router.js  search-engine.js  settings.js  side-panel.js  smooth-scrolling.js  storage.js  tracker.js  ui-interactions.js  ui.js  utils.js  visualizer.js
js/accounts/: appwrite-sync.js  auth.js
js/api/: home.js
js/desktop/: desktop.js  discord-bridge.js  discord-rpc.js  neutralino-updater.js  runtime.js  tauri-audio-engine.js  tauri-runtime.js  tauri-updater.js
js/lib/: appwrite.js
js/ui/: homeSections.js
js/visualizers/: video_cover.js
public/: _redirects  discord.html  instances.json  login.html  manifest.json  neutralino_loader.html  recommended-artists.json  splashscreen.html
scripts/: build-all.sh  build-dev.sh  build-linux-installers.sh  build-macos-installer.sh  build-production.sh  build-windows-installers.ps1  build-windows.sh  cross-compile-windows.sh  generate-update-manifest.mjs  setup-appwrite.js
src-tauri/: Cargo.toml  TITLEBAR.md  build.rs  tauri.conf.json  tauri.dev.conf.json  titlebar.css  titlebar.js
src-tauri/capabilities/: default.json  dev.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: bridge.ps1  bridge.py
src-tauri/src/: lib.rs  main.rs
