[package]
name = "monochrome-plus"
version = "2.0.6"
description = "Monochrome+ - A high-fidelity music streaming application"
authors = ["itsmeadarsh2008"]
license = "ISC"
repository = "https://github.com/itsmeadarsh2008/monochrome-plus"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [
    "tray-icon",
    "image-png",
    "image-ico",
    "custom-protocol",
] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
once_cell = "1.19"
anyhow = "1.0"
discord-presence = "3.2"
